--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>리액트 폐관수련</title>
+        <title>Win:G Project</title>
     </head>
     <body>
         <div id="root"></div>
