--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <script src="https://sdk.amazonaws.com/js/aws-sdk-2.283.1.min.js"></script>
         <title>Win:G Project</title>
+        <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
     </head>
     <body>
         <div id="root"></div>
