후원 결제, 후원 결과 페이지 추가

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,11 @@
         <script src="https://sdk.amazonaws.com/js/aws-sdk-2.283.1.min.js"></script>
         <title>Win:G Project</title>
         <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
+
+        <!-- jQuery -->
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+        <!-- iamport.payment.js -->
+        <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.7.js"></script>
     </head>
     <body>
         <div id="root"></div>
