--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,6 @@
         <script src="https://sdk.amazonaws.com/js/aws-sdk-2.283.1.min.js"></script>
         <title>Win:G Project</title>
         <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-
         <!-- jQuery -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
         <!-- iamport.payment.js -->
@@ -12,5 +11,6 @@
     </head>
     <body>
         <div id="root"></div>
+        <div id="player"></div>
     </body>
 </html>
