--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=549b26642dfb79293256d4b7e8e0f02d"></script>
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=549b26642dfb79293256d4b7e8e0f02d&autoload=false"></script>
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=549b26642dfb79293256d4b7e8e0f02d&libraries=services"></script>
         <script src="https://sdk.amazonaws.com/js/aws-sdk-2.283.1.min.js"></script>
         <title>Win:G Project</title>
