index.html footer 설정

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=549b26642dfb79293256d4b7e8e0f02d&autoload=false"></script>
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=549b26642dfb79293256d4b7e8e0f02d&libraries=services"></script>
@@ -11,8 +11,16 @@
         <!-- iamport.payment.js -->
         <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.7.js"></script>
     </head>
+    <style>
+        #player {
+            position: absolute;
+            top: 150%;
+            height: 200px;
+            color: white;
+        }
+    </style>
     <body>
         <div id="root"></div>
-        <div id="player"></div>
+        <div id="player">Footer</div>
     </body>
 </html>
